modify article 20200325 tags

--- a/content/20200325_covid19-tokyo.md
+++ b/content/20200325_covid19-tokyo.md
@@ -1,7 +1,7 @@
 Title: COVID-19 in Tokyo
 Date: 2020-03-25
 Category: 時事
-Tags: 時事、政治、ニュース、covid19 
+Tags: 時事,政治,ニュース,covid19 
 Slug: covid19-tokyo
 Authors: s.hosoya
 
